# google-tests-basic-setup

./: CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt  test1.cpp
tests/: myTest1.cpp
